# numpyencoder

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
numpyencoder/: __init__.py  numpyencoder.py
numpyencoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_example.py
